[package]
name = "ewok"
version = "0.1.0"
authors = ["Michael Sproul <micsproul@gmail.com>"]

[dependencies]
rand = "0.3"
itertools = "0.6"
maplit = "0.1"
log = "0.3"
env_logger = "0.4"
regex = "0.2"
clap = "2.24"

[[bin]]
name = "ewok"
path = "src/main.rs"
doc = false

[[bin]]
name = "graph"
path = "src/bin/graph.rs"
doc = false

[profile.release]
debug = true
